# artifacts/api-server/src/routes/index.ts
@@ -5,6 +5,8 @@ import videosRouter from "./videos";
 import overridesRouter from "./overrides";
 import translateRouter from "./translate";
 import sitemapRouter from "./sitemap";
+import articlesRouter from "./articles";
+import feedRouter from "./feed";
 
 const router: IRouter = Router();
 
@@ -14,5 +16,7 @@ router.use(videosRouter);
 router.use(overridesRouter);
 router.use(translateRouter);
 router.use(sitemapRouter);
+router.use(articlesRouter);
+router.use(feedRouter);
 
 export default router;
